--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
         name: task-manager
 
     datasource:
-        url: jdbc:postgresql://localhost:5432/taskmanagerdb
+        url: jdbc:postgresql://localhost:5432/taskmanager
         username: postgres
         password: postgres
         driver-class-name: org.postgresql.Driver
@@ -14,8 +14,12 @@ spring:
         show-sql: true
         properties:
             hibernate:
-                dialect: org.hibernate.dialect.PostgreSQLDialect
+                format_sql: true
 management:
     server:
         port: 8080
-
+    security:
+        user:
+            name: admin
+            password: admin123
+            roles: ADMIN
