--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,23 +3,33 @@ spring:
         name: task-manager
 
     datasource:
-        url: jdbc:postgresql://localhost:5432/taskmanager
-        username: postgres
-        password: postgres
+        url: ${DB_URL}
+        username: ${DB_USERNAME}
+        password: ${DB_PASSWORD}
         driver-class-name: org.postgresql.Driver
+        secret-key: ${JWT_SECRET_KEY}
+        expiration: 3600000
 
     jpa:
         hibernate:
             ddl-auto: none
         show-sql: true
         properties:
+            debug: true
             hibernate:
                 format_sql: true
+logging:
+    level:
+        org.springframework.security: DEBUG
+        org.springframework.security.crypto.password: DEBUG
+
 management:
     server:
         port: 8080
     security:
         user:
-            name: admin
-            password: admin123
+            name: ${ADMIN_USERNAME}
+            password: ${ADMIN_PASSWORD}
             roles: ADMIN
+
+        
