--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+    profiles:
+        active: dev
     application:
         name: task-manager
 
@@ -32,4 +34,22 @@ management:
             password: ${ADMIN_PASSWORD}
             roles: ADMIN
 
-        
+---
+
+spring:
+    config:
+        activate:
+            on-profile: test
+    datasource:
+        url: jdbc:h2:mem:testdb
+        driver-class-name: org.h2.Driver
+        username: sa
+        password: ""
+    jpa:
+        database-platform: org.hibernate.dialect.H2Dialect
+        hibernate:
+            ddl-auto: update
+    h2:
+        console:
+            enabled: true
+            path: /h2-console
